[EMCRI-301] Complete flow from: BCeID Authentication -> Notice of Collection -> Dashboard

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/collection-notice/collection-notice.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/collection-notice/collection-notice.component.html
@@ -16,13 +16,26 @@
               Notice of Collection
             </p>
             <p style="font-size: 15px; width: 49%; min-width : 602px;" class="cNotice1">
-              Personal information on this form is collected by The Ministry of Emergency Management and Climate Readiness (EMCR) under section 26(c) and 27(1)(a) and (b) of the Freedom of Information and Protection of Privacy Act (FOIPPA). The information will be used to evaluate your pre, and post-disaster circumstances to determine eligibility for Disaster Financial Assistance. If you have any questions about the collection of this information, contact 1-888-257-4777 or DFA.Private@gov.bc.ca.
+              Personal information on this form is collected by The Ministry of Emergency Management and Climate Readiness (EMCR) 
+              under section 26(c) and 27(1)(a) and (b) of the Freedom of Information and Protection of Privacy Act (FOIPPA). 
+              The information will be used to evaluate your pre, and post-disaster circumstances to determine eligibility 
+              for Disaster Financial Assistance. If you have any questions about the collection of this information, 
+              contact 1-888-257-4777 or DFA.Private@gov.bc.ca.
             </p>
              <p style="font-size: 18px; font-weight: bold">
               Sharing of Information
             </p>
             <p style="font-size: 15px; width: 50%; min-width: 602px;" class="cNotice2">
-              EMCR may disclose the information on this form to other relief organizations, indigenous governing bodies, and governments that are offering any assistance whatsoever as a result of this disaster. EMCR (or its agent) may disclose information to, or collect information from, other Provincial Government Ministries and Crown Corporations, as permitted by FOIPPA, to verify that the information provided on this form is accurate. Specifically, I/we authorize BC Assessment to provide representatives from EMCR with confidential information about my/our property. This information will assist EMCR in assessing damages from the recent authorized DFA event. Personal information is protected from unauthorized use and disclosure in accordance with the Freedom of Information and Protection of Privacy Act and may be disclosed only as provided by that Act.
+              EMCR may disclose the information on this form to other relief organizations, indigenous governing bodies, 
+              and governments that are offering any assistance whatsoever as a result of this disaster. 
+              EMCR (or its agent) may disclose information to, or collect information from, 
+              other Provincial Government Ministries and Crown Corporations, as permitted by FOIPPA, 
+              to verify that the information provided on this form is accurate. 
+              Specifically, I/we authorize BC Assessment to provide representatives from EMCR with confidential information 
+              about my/our property. 
+              This information will assist EMCR in assessing damages from the recent authorized DFA event. 
+              Personal information is protected from unauthorized use and disclosure in accordance with 
+              the Freedom of Information and Protection of Privacy Act and may be disclosed only as provided by that Act.
             </p>
            
             
