EMBCDFA-1271 Fixed button styles, issues with mat-tab-nav-bar

--- a/dfa/src/UI/embc-dfa/src/app/core/layout/header/header.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/core/layout/header/header.component.scss
@@ -17,6 +17,11 @@
   min-width: 320px !important;
 }
 
+.signOut-button {
+  color: rgb(252, 186, 25) !important;
+  --mdc-theme-text-primary-on-background:  rgb(252, 186, 25);
+}
+
 .mat-mdc-menu-item {
   color: #ffffff !important;
 }
@@ -94,9 +99,7 @@ header mat-toolbar {
   border-bottom: 2px solid #fcba19;
 }
 
-.signOut-button {
-  color: rgb(252, 186, 25) !important;
-}
+
 
 .signOut-button:hover {
   text-decoration: underline;
