- Uninstall angular2-text-mask library as this is not compitable with angular 16 version and up - Added new angular i mask library for masking - Commented out the angular2-text-mask on all the componnets that is being used - Updated angular-oauth2-oidc library

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
@@ -384,10 +384,10 @@
                     maxlength="100"
                     required
                     formControlName="cellPhoneNumber"
-                    [textMask]="{ mask: phoneMask, keepCharPositions: true }"
                     matInput
                     placeholder="Cellular Telephone Number"
-                  />
+                    />
+                    <!-- [textMask]="{ mask: phoneMask, keepCharPositions: true }" -->
                   <mat-error
                     *ngIf="
                       profileVerificationForm.get('profile.contactDetails.cellPhoneNumber').invalid &&
@@ -417,10 +417,10 @@
                   <input
                     maxlength="100"
                     formControlName="residencePhone"
-                    [textMask]="{ mask: phoneMask, keepCharPositions: true }"
                     matInput
                     placeholder="Residence Telephone Number"
-                  />
+                    />
+                    <!-- [textMask]="{ mask: phoneMask, keepCharPositions: true }" -->
                   <mat-error
                     *ngIf="
                       profileVerificationForm.get('profile.contactDetails.residencePhone').invalid &&
@@ -449,10 +449,10 @@
                   <input
                     maxlength="100"
                     formControlName="alternatePhone"
-                    [textMask]="{ mask: phoneMask, keepCharPositions: true }"
                     matInput
                     placeholder="Alternate Telephone Number"
-                  />
+                    />
+                    <!-- [textMask]="{ mask: phoneMask, keepCharPositions: true }" -->
                   <mat-error
                     *ngIf="
                       profileVerificationForm.get('profile.contactDetails.alternatePhone').invalid &&
