--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
@@ -22,9 +22,9 @@ information and to verify that the information provided by you is accurate.
                 formControlName="cellPhoneNumber"
                 matInput
                 placeholder="Cellular Telephone Number"
-                [textMask]="{ mask: phoneMask, keepCharPositions: true }"
                 required
-              />
+                />
+                <!-- [textMask]="{ mask: phoneMask, keepCharPositions: true }" -->
               <mat-error
                 *ngIf="
                   contactFormControl.cellPhoneNumber.invalid &&
@@ -55,8 +55,8 @@ information and to verify that the information provided by you is accurate.
                 formControlName="residencePhone"
                 matInput
                 placeholder="Residence Telephone Number"
-                [textMask]="{ mask: phoneMask, keepCharPositions: true }"
-              />
+                />
+                <!-- [textMask]="{ mask: phoneMask, keepCharPositions: true }" -->
               <mat-error
                 *ngIf="
                   contactFormControl.residencePhone.invalid &&
@@ -71,8 +71,8 @@ information and to verify that the information provided by you is accurate.
                 formControlName="alternatePhone"
                 matInput
                 placeholder="Alternate Telephone Number"
-                [textMask]="{ mask: phoneMask, keepCharPositions: true }"
-              />
+                />
+                <!-- [textMask]="{ mask: phoneMask, keepCharPositions: true }" -->
               <mat-error
                 *ngIf="
                   contactFormControl.alternatePhone.invalid &&
